修改我的  底部导航UI大小

--- a/common_core/src/main/res/layout/bottom_item_icon_text_layout.xml
+++ b/common_core/src/main/res/layout/bottom_item_icon_text_layout.xml
@@ -3,25 +3,26 @@
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:paddingTop="6dp"
+    android:paddingTop="7dp"
     android:paddingBottom="6dp">
 
 
     <com.joanzapata.iconify.widget.IconTextView
         android:id="@+id/icon_bottom_item"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:textSize="25sp" />
+        android:textSize="24sp" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_bottom_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/icon_bottom_item"
+        android:layout_marginTop="3dp"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"
+        android:textSize="@dimen/c_sp13"
         android:gravity="center" />
 </RelativeLayout>
