--- a/common_ec/src/main/res/layout/delegate_setpassword.xml
+++ b/common_ec/src/main/res/layout/delegate_setpassword.xml
@@ -96,7 +96,7 @@
             android:layout_marginEnd="40dp"
             android:background="@mipmap/buttom_login_gray"
             android:gravity="center"
-            android:padding="12sp"
+            android:padding="12dp"
             android:text="完成"
             android:textColor="@color/app_text_gray"
             tools:ignore="HardcodedText" />
