--- a/common_ec/src/main/res/layout/delegate_index_yijia.xml
+++ b/common_ec/src/main/res/layout/delegate_index_yijia.xml
@@ -76,8 +76,8 @@
                 android:paddingStart="14dp"
                 android:paddingBottom="13dp"
                 android:text="{icon-yscan}"
-                android:textColor="@color/app_text_orange"
-                android:textSize="18sp" />
+                android:textColor="@color/main_text_black_dark"
+                android:textSize="22sp" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
@@ -87,7 +87,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
                 android:text="壹家"
-                android:textColor="@color/app_text_orange"
+                android:textColor="@color/main_text_black_dark"
                 android:textSize="18sp" />
 
             <com.joanzapata.iconify.widget.IconTextView
@@ -99,8 +99,8 @@
                 android:paddingEnd="16dp"
                 android:paddingBottom="13dp"
                 android:text="{icon-ycamera}"
-                android:textColor="@color/app_text_orange"
-                android:textSize="18sp" />
+                android:textColor="@color/main_text_black_dark"
+                android:textSize="22sp" />
 
         </RelativeLayout>
 
