--- a/common_ui/src/main/res/layout/headlayout.xml
+++ b/common_ui/src/main/res/layout/headlayout.xml
@@ -10,15 +10,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        >
-
-        <ViewStub
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/head_return_linear"
             android:layout_marginTop="30dp"
-            android:id="@+id/head_return"
-            android:layout_width="9dp"
-            android:layout_height="17dp"
+            android:layout_width="44dp"
             android:layout_marginLeft="15dp"
             android:padding="2dp"
-            android:layout="@layout/head_left" />
+            android:layout_height="match_parent">
+            <ViewStub
+                android:id="@+id/head_return"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout="@layout/head_left" />
+
+        </LinearLayout>
+
 
         <ViewStub
             android:id="@+id/head_name"
