--- a/common_ui/src/main/res/layout/view_horizontaltextline.xml
+++ b/common_ui/src/main/res/layout/view_horizontaltextline.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:minHeight="50dp">
 
     <ImageView
         android:id="@+id/iconIv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginLeft="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,22 +23,20 @@
         android:layout_marginLeft="12dp"
         android:text="设置"
         android:textColor="#333333"
-        android:textSize="13sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/iconIv"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/dot"
-        android:layout_width="7dp"
-        android:layout_height="7dp"
-        android:layout_marginLeft="5dp"
-        android:background="@drawable/def"
-        android:visibility="gone"
+        android:layout_width="6dp"
+        android:layout_height="12dp"
+        android:layout_marginRight="15dp"
+        android:background="@mipmap/youjiantou"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/infoTv"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    />
 
     <View
         android:layout_width="match_parent"
