--- a/tuikit/src/main/res/layout/chat_bottom_group_copy.xml
+++ b/tuikit/src/main/res/layout/chat_bottom_group_copy.xml
@@ -2,20 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@mipmap/im_bottom_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#c2c2c2" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="55dp"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="5dp">
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="bottom"
+            android:padding="5dp">
 
+            <ImageView
+                android:id="@+id/voice_input_switch"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/action_audio_selector" />
+        </RelativeLayout>
 
 
         <EditText
@@ -30,21 +46,7 @@
             android:maxHeight="120dp"
             android:minHeight="35dp"
             android:padding="5dp" />
-        <RelativeLayout
-            android:layout_marginStart="6dp"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_gravity="bottom"
-            android:padding="5dp">
 
-            <ImageView
-                android:id="@+id/voice_input_switch"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/action_audio_selector" />
-        </RelativeLayout>
         <Button
             android:id="@+id/chat_voice_input"
             style="?android:attr/borderlessButtonStyle"
@@ -109,6 +111,10 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#c2c2c2" />
 
     <RelativeLayout
         android:id="@+id/more_groups"
