--- a/tuikit/src/main/res/layout/layout_page_title_group_copy.xml
+++ b/tuikit/src/main/res/layout/layout_page_title_group_copy.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="45dp"
     android:background="#ffffff">
 
     <LinearLayout
@@ -9,19 +9,18 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
+        android:gravity="center_vertical"
         android:minWidth="80dp"
         android:orientation="horizontal"
-        android:paddingLeft="15dp">
+        android:paddingLeft="16dp">
 
         <ImageView
             android:id="@+id/page_title_left_icon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:clickable="false"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="13dp"
-            android:src="@mipmap/icon_back_black" />
+            android:src="@drawable/title_bar_back" />
 
         <TextView
             android:id="@+id/page_title_left_text"
@@ -37,9 +36,8 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:paddingBottom="9dp"
-        android:textColor="@color/main_text_black_dark"
+        android:gravity="center"
+        android:textColor="#000"
         android:textSize="18sp" />
 
     <LinearLayout
@@ -65,7 +63,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:visibility="invisible"
             android:clickable="false"
             android:src="@drawable/member_icon" />
     </LinearLayout>
