--- a/tuikit/src/main/res/layout/chat_bottom_group.xml
+++ b/tuikit/src/main/res/layout/chat_bottom_group.xml
@@ -19,7 +19,10 @@
 
 
         <EditText
+            android:paddingTop="7dp"
             android:id="@+id/chat_message_input"
+            android:hint="输入消息内容"
+            android:textColorHint="@color/main_text_gary_99"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -32,18 +35,19 @@
             android:padding="5dp" />
         <RelativeLayout
             android:layout_marginStart="6dp"
+            android:layout_marginEnd="14dp"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_gravity="bottom"
-            android:padding="5dp">
+            >
 
             <ImageView
                 android:id="@+id/voice_input_switch"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
                 android:layout_centerVertical="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/action_audio_selector" />
+                android:src="@mipmap/icon_im_speak" />
         </RelativeLayout>
         <Button
             android:id="@+id/chat_voice_input"
@@ -61,6 +65,7 @@
 
 
         <LinearLayout
+            android:paddingTop="7dp"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_gravity="bottom"
@@ -69,8 +74,8 @@
 
             <ImageView
                 android:id="@+id/face_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="29dp"
+                android:layout_height="29dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:scaleType="fitXY"
@@ -83,8 +88,8 @@
 
                 <ImageView
                     android:id="@+id/more_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="29dp"
+                    android:layout_height="29dp"
                     android:layout_centerInParent="true"
                     android:scaleType="fitXY"
                     android:src="@drawable/action_more_selector" />
