--- a/common_bokang/src/main/res/layout/delegate_edit_picture.xml
+++ b/common_bokang/src/main/res/layout/delegate_edit_picture.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/et_text"
         android:hint="说点什么吧！"
-        android:textCursorDrawable="@color/black"
+        android:textCursorDrawable="@drawable/line_black"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/et_send_text"
