--- a/picture_library/src/main/res/values/styles.xml
+++ b/picture_library/src/main/res/values/styles.xml
@@ -17,13 +17,13 @@
     </style>
 
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/bar_grey</item>
-        <item name="colorPrimaryDark">@color/bar_grey</item>
-        <item name="colorAccent">@color/bar_grey</item>
-    </style>
+    <!--&lt;!&ndash; Base application theme. &ndash;&gt;-->
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+        <!--<item name="colorPrimary">@color/bar_grey</item>-->
+        <!--<item name="colorPrimaryDark">@color/bar_grey</item>-->
+        <!--<item name="colorAccent">@color/bar_grey</item>-->
+    <!--</style>-->
 
     <style name="picture_alert_dialog" parent="android:Theme.Dialog">
         <item name="android:windowIsFloating">true</item>
