--- a/common_bokang/src/main/res/layout/include_item_index_top.xml
+++ b/common_bokang/src/main/res/layout/include_item_index_top.xml
@@ -26,7 +26,7 @@
         android:textStyle="bold"
         tools:text="爸爸" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <com.example.latte.ui.expandtextview.ExpandTextView
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
