--- a/common_bokang/src/main/res/layout/delegate_notice.xml
+++ b/common_bokang/src/main/res/layout/delegate_notice.xml
@@ -3,9 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_index"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/notice_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
+</android.support.v4.widget.SwipeRefreshLayout>
 </android.support.constraint.ConstraintLayout>
