--- a/common_bokang/src/main/res/layout/item_index_comment.xml
+++ b/common_bokang/src/main/res/layout/item_index_comment.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll"
     android:layout_marginTop="5dp"
-    android:background="@color/white"
+    android:padding="4dp"
+    android:background="@drawable/rectangle_gray"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatTextView
+        android:layout_marginStart="10dp"
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/main_text_blue_57"
-        android:textSize="13sp"
+        android:textSize="16sp"
         tools:text="张三:" />
 
     <android.support.v7.widget.AppCompatTextView
