--- a/common_bokang/src/main/res/layout/delegate_edit_letter.xml
+++ b/common_bokang/src/main/res/layout/delegate_edit_letter.xml
@@ -8,6 +8,7 @@
     <include layout="@layout/include_edit_top" />
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="40dp">
         <android.support.v7.widget.AppCompatTextView
             android:text="标题"
@@ -20,6 +21,10 @@
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/et_title"
             android:hint="请输入标题"
+            tools:text="哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇"
+            android:maxEms="12"
+            android:maxLines="1"
+            android:maxLength="12"
             android:textColor="@color/main_text_black_dark"
             android:textSize="16sp"
             android:textColorHint="@color/main_text_gary_99"
