--- a/common_bokang/src/main/res/layout/item_index_video2.xml
+++ b/common_bokang/src/main/res/layout/item_index_video2.xml
@@ -11,6 +11,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_video"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="42dp"
         android:layout_marginEnd="32dp"
         android:layout_width="match_parent"
