顶部发表位置 首页加头像 编辑选择图片布局

--- a/common_bokang/src/main/res/layout/delegate_setup.xml
+++ b/common_bokang/src/main/res/layout/delegate_setup.xml
@@ -1,126 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
+
     <com.example.latte.ui.widget.HeadLayout
         android:id="@+id/head_layout"
         android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:layout_height="64dp"/>
+        android:layout_height="64dp"
+        android:gravity="center_vertical" />
 
     <LinearLayout
         android:id="@+id/specified"
         android:layout_width="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_height="52dp"
         android:layout_marginTop="13dp"
         android:background="#ffffff"
-        android:orientation="horizontal"
-        android:layout_height="51dp">
+        android:orientation="horizontal">
+
         <TextView
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="指定关系"
             android:layout_gravity="center_vertical"
-            android:textSize="16sp"
             android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:text="监护人管理"
             android:textColor="#333333"
-            />
+            android:textSize="16sp" />
 
         <ImageView
             android:layout_width="5dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:src="@mipmap/youjiantou"
             android:layout_marginRight="14dp"
-            />
+            android:src="@mipmap/youjiantou" />
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="15dp"
+        android:background="@color/main_line_default_f5" />
 
     <LinearLayout
         android:id="@+id/setup_pwd"
         android:layout_width="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="13dp"
+        android:layout_height="51dp"
         android:background="#ffffff"
-        android:orientation="horizontal"
-        android:layout_height="51dp">
+        android:orientation="horizontal">
+
         <TextView
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="修改密码"
             android:layout_gravity="center_vertical"
-            android:textSize="16sp"
             android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:text="修改密码"
             android:textColor="#333333"
-            />
+            android:textSize="16sp" />
 
         <ImageView
             android:layout_width="5dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:src="@mipmap/youjiantou"
             android:layout_marginRight="14dp"
-            />
+            android:src="@mipmap/youjiantou" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="15dp"
+        android:background="@color/main_line_default_f5" />
 
     <LinearLayout
         android:id="@+id/nodisturb"
         android:layout_width="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="13dp"
+        android:layout_height="51dp"
         android:background="#ffffff"
-        android:orientation="horizontal"
-        android:layout_height="51dp">
+        android:orientation="horizontal">
+
         <TextView
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="勿扰模式"
             android:layout_gravity="center_vertical"
-            android:textSize="16sp"
             android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:text="勿扰模式"
             android:textColor="#333333"
-            />
+            android:textSize="16sp" />
 
         <ImageView
             android:layout_width="5dp"
             android:layout_height="10dp"
             android:layout_gravity="center_vertical"
-            android:src="@mipmap/youjiantou"
             android:layout_marginRight="14dp"
-            />
+            android:src="@mipmap/youjiantou" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/log_out"
         android:layout_width="match_parent"
+        android:layout_height="51dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="13dp"
         android:background="#ffffff"
-        android:orientation="horizontal"
-        android:layout_height="51dp">
+        android:orientation="horizontal">
+
         <TextView
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="退出登录"
-            android:gravity="center"
             android:layout_gravity="center_vertical"
-            android:textSize="15sp"
             android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="退出登录"
             android:textColor="#333333"
-            />
+            android:textSize="15sp" />
     </LinearLayout>
 
 </LinearLayout>
