--- a/common_bokang/src/main/res/layout/include_item_index_top.xml
+++ b/common_bokang/src/main/res/layout/include_item_index_top.xml
@@ -8,19 +8,20 @@
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="@color/main_line_default_f5"/>
-    <android.support.v7.widget.AppCompatTextView
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/civ_img"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="13dp"
         android:background="@mipmap/icon_index_time" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="12dp"
         android:textColor="@color/main_text_blue_57"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -30,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/tv_name"
         android:textColor="@color/main_text_gary_99"
         android:textSize="15sp"
