--- a/common_bokang/src/main/res/layout/delegate_edit_letter.xml
+++ b/common_bokang/src/main/res/layout/delegate_edit_letter.xml
@@ -6,20 +6,49 @@
     android:orientation="vertical">
 
     <include layout="@layout/include_edit_top" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/main_line_ef" />
+    <android.support.v7.widget.LinearLayoutCompat
+        android:id="@+id/ll_recipients"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_vertical">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="15dp"
+            android:text="收件人："
+            android:textColor="@color/main_text_black_dark"
+            android:textSize="@dimen/third_title_16" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_recipients"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tv_add"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="15dp"
+            android:background="@mipmap/index_edit_addrecipients" />
+
+    </android.support.v7.widget.LinearLayoutCompat>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/main_line_ef" />
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="40dp">
-        <android.support.v7.widget.AppCompatTextView
-            android:text="标题"
-            android:layout_gravity="center_vertical"
-            android:textSize="16sp"
-            android:textColor="@color/main_text_black_dark"
-            android:layout_marginStart="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/et_title"
+            android:paddingLeft="15dp"
             android:hint="请输入标题"
             tools:text="哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇"
             android:maxEms="12"
@@ -28,7 +57,7 @@
             android:textColor="@color/main_text_black_dark"
             android:textSize="16sp"
             android:textColorHint="@color/main_text_gary_99"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:textCursorDrawable="@drawable/line_black"
             android:background="@drawable/et_send_text"
             android:paddingStart="30dp"
@@ -61,39 +90,8 @@
             android:textCursorDrawable="@drawable/line_black"
             android:background="@drawable/et_send_text"
             android:textSize="@dimen/third_title_16" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:background="@color/main_line_f9" />
-        <android.support.v7.widget.LinearLayoutCompat
-            android:id="@+id/ll_recipients"
-            android:layout_width="match_parent"
-            android:layout_marginBottom="28dp"
-            android:layout_height="44dp"
-            android:gravity="center_vertical">
 
-            <android.support.v7.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="收件人："
-                android:textColor="@color/main_text_black_dark"
-                android:textSize="@dimen/third_title_16" />
 
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/tv_recipients"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/tv_add"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@mipmap/index_edit_addrecipients" />
-
-        </android.support.v7.widget.LinearLayoutCompat>
 
     </android.support.v7.widget.LinearLayoutCompat>
 
