--- a/common_bokang/src/main/res/layout/delegate_edit_letter.xml
+++ b/common_bokang/src/main/res/layout/delegate_edit_letter.xml
@@ -3,17 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/include_edit_top" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/main_line_ef" />
+
     <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/ll_recipients"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/white"
         android:gravity="center_vertical">
 
         <android.support.v7.widget.AppCompatTextView
@@ -38,39 +42,47 @@
             android:background="@mipmap/index_edit_addrecipients" />
 
     </android.support.v7.widget.LinearLayoutCompat>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/main_line_ef" />
+
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/white">
+
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/et_title"
-            android:paddingLeft="15dp"
-            android:hint="请输入标题"
-            tools:text="哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇"
-            android:maxEms="12"
-            android:maxLines="1"
-            android:maxLength="12"
-            android:textColor="@color/main_text_black_dark"
-            android:textSize="16sp"
-            android:textColorHint="@color/main_text_gary_99"
-            android:gravity="center_vertical"
-            android:textCursorDrawable="@drawable/line_black"
-            android:background="@drawable/et_send_text"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_height="match_parent" />
+            android:background="@drawable/et_send_text"
+            android:gravity="center_vertical"
+            android:hint="请输入标题"
+            android:maxEms="12"
+            android:maxLength="12"
+            android:maxLines="1"
+            android:paddingStart="30dp"
+            android:paddingLeft="15dp"
+            android:paddingEnd="30dp"
+            android:textColor="@color/main_text_black_dark"
+            android:textColorHint="@color/main_text_gary_99"
+            android:textCursorDrawable="@drawable/line_black"
+            android:textSize="16sp"
+            tools:text="哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇" />
     </android.support.v7.widget.LinearLayoutCompat>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/main_line_ef" />
+
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="13dp"
         android:layout_marginEnd="15dp"
         android:layout_weight="1"
         android:background="@drawable/et_send_text"
@@ -82,32 +94,31 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:background="@drawable/et_send_text"
             android:gravity="top|start"
             android:hint="开始给亲朋写信吧！只有自己和收件人可见"
             android:padding="15dp"
             android:textColor="@color/app_text_dark"
             android:textColorHint="@color/app_text_gray"
             android:textCursorDrawable="@drawable/line_black"
-            android:background="@drawable/et_send_text"
             android:textSize="@dimen/third_title_16" />
-
 
 
     </android.support.v7.widget.LinearLayoutCompat>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/bt_say"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="28dp"
-        android:gravity="center"
-        android:textColor="@color/main_text_orange"
         android:drawableStart="@mipmap/index_edit_say"
         android:drawablePadding="0dp"
-        android:text="语音" />
+        android:gravity="center"
+        android:text="语音"
+        android:textColor="@color/main_text_orange"
+        android:visibility="gone" />
 
 
 </android.support.v7.widget.LinearLayoutCompat>
