--- a/common_bokang/src/main/res/layout/include_edit_top.xml
+++ b/common_bokang/src/main/res/layout/include_edit_top.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="64dp">
+    android:layout_height="64dp"
+    android:background="@color/white">
 
     <RelativeLayout
         android:id="@+id/tv_back"
@@ -29,10 +30,6 @@
         android:textSize="@dimen/second_title_18" />
 
     <android.support.v7.widget.AppCompatTextView
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
         android:id="@+id/tv_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,8 +37,12 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="11dp"
-        android:text="发送"
         android:background="@drawable/rectangle_main_orange"
+        android:paddingStart="15dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="2dp"
+        android:text="发送"
         android:textColor="@color/white"
         android:textSize="15sp" />
 </RelativeLayout>
