--- a/tuikit/src/main/res/layout/login_panel.xml
+++ b/tuikit/src/main/res/layout/login_panel.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo" />
+            android:src="@drawable/tuilogo" />
 
 
         <LinearLayout
