--- a/common_bokang/src/main/res/layout/include_edit_top.xml
+++ b/common_bokang/src/main/res/layout/include_edit_top.xml
@@ -45,4 +45,15 @@
         android:text="发送"
         android:textColor="@color/white"
         android:textSize="15sp" />
+
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/tv_icon"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@mipmap/icon_add_jianhuren"
+        android:visibility="gone"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="12dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp" />
 </RelativeLayout>
