--- a/common_bokang/src/main/res/layout/delegate_sign_only_yijia.xml
+++ b/common_bokang/src/main/res/layout/delegate_sign_only_yijia.xml
@@ -125,7 +125,6 @@
 
 
     <android.support.v7.widget.AppCompatButton
-
         android:id="@+id/btn_sign_in"
         android:layout_width="match_parent"
         android:layout_height="41dp"
@@ -135,6 +134,7 @@
         android:background="@mipmap/buttom_login_gray"
         android:gravity="center"
         android:padding="12sp"
+        android:textSize="15sp"
         android:text="登录"
         android:textColor="@color/app_text_gray"
         tools:ignore="HardcodedText" />
