--- a/common_bokang/src/main/res/layout/delegate_identityauthentication.xml
+++ b/common_bokang/src/main/res/layout/delegate_identityauthentication.xml
@@ -29,10 +29,12 @@
         android:layout_height="202dp"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view">
 
-        <android.support.v7.widget.AppCompatTextView
+        <ImageView
+            android:id="@+id/im_back"
             android:layout_width="281dp"
             android:layout_height="158dp"
             android:layout_centerInParent="true"
@@ -55,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="点击拍摄/上传人像面"
+                android:text="点击拍摄/重新上传"
                 android:textColor="#5EA3F7"
                 android:textSize="16sp" />
         </android.support.v7.widget.LinearLayoutCompat>
@@ -65,7 +67,7 @@
         android:id="@+id/linearLayoutCompat"
         android:layout_width="match_parent"
         android:layout_height="202dp"
-        android:layout_marginTop="10dp"
+
         android:background="@color/white"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
