--- a/common_core/src/main/res/layout/bottom_item_image_layout.xml
+++ b/common_core/src/main/res/layout/bottom_item_image_layout.xml
@@ -3,16 +3,14 @@
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:paddingTop="7dp"
-    android:paddingBottom="6dp">
-
+    >
 
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_bottom_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="6dp"
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/c_sp13"
         android:gravity="center" />
