--- a/common_bokang/src/main/res/layout/item_index_letter.xml
+++ b/common_bokang/src/main/res/layout/item_index_letter.xml
@@ -14,7 +14,8 @@
     android:layout_width="match_parent"
     android:layout_marginStart="47dp"
     android:layout_marginEnd="15dp"
-    android:layout_height="75dp">
+    android:layout_marginBottom="10dp"
+    android:layout_height="wrap_content">
     <com.example.latte.ui.progressbar.LetterPlayProgressBar
         android:id="@+id/bp_letterplay"
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
         android:background="@mipmap/icon_index_canread"
         android:layout_width="20dp"
         android:layout_height="15dp"
+        android:visibility="gone"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         />
