--- a/common_core/src/main/res/values/colors.xml
+++ b/common_core/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="main_text_gary_99">#999999</color>
     <color name="main_text_white">#ffffff</color>
     <color name="main_text_blue_57">#576B95</color>
+    <color name="main_text_black_46">#464646</color>
 
     <color name="main_background_f5">#F5F5F5</color>
     <color name="main_background_f6">#F6F6F6</color>
