--- a/common_bokang/src/main/res/layout/delegate_sign_only_yijia.xml
+++ b/common_bokang/src/main/res/layout/delegate_sign_only_yijia.xml
@@ -13,7 +13,7 @@
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
         android:layout_marginTop="11dp"
         android:gravity="center"
         android:text="登录"
@@ -24,15 +24,15 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="58dp"
-        android:layout_marginEnd="40dp">
+        android:layout_marginRight="40dp">
 
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="14dp"
             android:layout_height="21dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
             android:scaleType="fitXY"
             android:src="@mipmap/icon_login_phone" />
 
@@ -40,8 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="27dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginLeft="27dp"
+            android:layout_marginRight="12dp"
             android:text="+86"
             android:textColor="@color/main_text_black_dark"
             android:textSize="@dimen/second_title_18" />
@@ -50,7 +50,7 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:theme="@style/hintAppearance">
 
             <android.support.design.widget.TextInputEditText
@@ -72,15 +72,15 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
+        android:layout_marginLeft="41dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="40dp">
+        android:layout_marginRight="40dp">
 
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="16dp"
             android:layout_height="18dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="2dp"
+            android:layout_marginLeft="2dp"
             android:scaleType="fitXY"
             android:src="@mipmap/icon_login_password" />
 
@@ -89,7 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
             android:layout_weight="1"
             android:theme="@style/hintAppearance">
 
@@ -128,9 +128,9 @@
         android:id="@+id/btn_sign_in"
         android:layout_width="match_parent"
         android:layout_height="41dp"
-        android:layout_marginStart="41dp"
+        android:layout_marginLeft="41dp"
         android:layout_marginTop="69dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:background="@mipmap/buttom_login_gray"
         android:gravity="center"
         android:padding="12sp"
@@ -168,8 +168,8 @@
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="54dp"
-            android:layout_marginEnd="54dp"
+            android:layout_marginLeft="54dp"
+            android:layout_marginRight="54dp"
             android:scaleType="fitXY"
             android:src="@mipmap/icon_login_weibo" />
 
