--- a/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
+++ b/common_bokang/src/main/res/layout/delegate_index_yijia2.xml
@@ -34,12 +34,11 @@
 
                     <com.joanzapata.iconify.widget.IconTextView
                         android:id="@+id/icon_index_scan"
-                        android:layout_width="50dp"
+                        android:layout_width="52dp"
                         android:layout_height="match_parent"
-                        android:gravity="start|bottom"
-                        android:paddingStart="14dp"
+                        android:gravity="center_horizontal|bottom"
                         android:paddingBottom="13dp"
-                        android:text="{icon-yscan}"
+                        android:text="{icon-yj-index-top-mine}"
                         android:textColor="@color/white"
                         android:textSize="22sp" />
 
@@ -55,13 +54,12 @@
 
                     <com.joanzapata.iconify.widget.IconTextView
                         android:id="@+id/icon_index_message"
-                        android:layout_width="50dp"
+                        android:layout_width="52dp"
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
-                        android:gravity="start|bottom"
-                        android:paddingEnd="16dp"
+                        android:gravity="center_horizontal|bottom"
                         android:paddingBottom="13dp"
-                        android:text="{icon-ycamera}"
+                        android:text="{icon-yj-index-top-camera}"
                         android:textColor="@color/white"
                         android:textSize="22sp" />
 
@@ -95,8 +93,10 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tb_index"
+                style="@style/NoLeftToolbar"
+                app:contentInsetStartWithNavigation="0dp"
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="64dp"
                 app:contentScrim="@color/white"
                 app:layout_collapseMode="pin">
 
@@ -106,12 +106,11 @@
 
                     <com.joanzapata.iconify.widget.IconTextView
                         android:id="@+id/icon_index_scan2"
-                        android:layout_width="50dp"
+                        android:layout_width="52dp"
                         android:layout_height="match_parent"
-                        android:gravity="start|bottom"
-                        android:paddingStart="14dp"
+                        android:gravity="center_horizontal|bottom"
                         android:paddingBottom="13dp"
-                        android:text="{icon-yscan}"
+                        android:text="{icon-yj-index-top-mine}"
                         android:textColor="@color/main_text_black_dark"
                         android:textSize="22sp" />
 
@@ -128,13 +127,12 @@
 
                     <com.joanzapata.iconify.widget.IconTextView
                         android:id="@+id/icon_index_message2"
-                        android:layout_width="50dp"
+                        android:layout_width="52dp"
                         android:layout_height="match_parent"
+                        android:gravity="center_horizontal|bottom"
                         android:layout_alignParentRight="true"
-                        android:gravity="start|bottom"
-                        android:paddingEnd="16dp"
                         android:paddingBottom="13dp"
-                        android:text="{icon-ycamera}"
+                        android:text="{icon-yj-index-top-camera}"
                         android:textColor="@color/main_text_black_dark"
                         android:textSize="22sp" />
 
