--- a/common_bokang/src/main/res/layout/delegate_invite.xml
+++ b/common_bokang/src/main/res/layout/delegate_invite.xml
@@ -48,8 +48,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="29dp"
         android:gravity="center_vertical"
-        android:layout_marginTop="29dp">
+        android:visibility="gone">
 
         <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/cb_guardian"
