--- a/common_bokang/src/main/res/layout/friends_itme.xml
+++ b/common_bokang/src/main/res/layout/friends_itme.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:layout_height="56dp">
+    android:layout_height="64dp">
 
     <ImageView
         android:layout_marginStart="15dp"
@@ -14,7 +14,7 @@
 
     <TextView
         android:gravity="center_vertical"
-        android:textColor="#333333"
+        android:textColor="@color/main_text_black_46"
         android:textSize="20sp"
         android:layout_marginLeft="10dp"
         android:id="@+id/nickname"
